fixed bug #29311 added support for Cursors (MySQL 5.0.x)